# Haskell-JSON

./: .gitignore  Haskell-JSON.cabal  README.md
src/: Env.hs  Json.hs  Main.hs  Temp.hs  env.json  example.json
tests/: Main.hs  tests.hs
