name:                Haskell-JSON
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shubhamjagdhane/Haskell-JSON#readme
license:             BSD3
license-file:        LICENSE
author:              Shubham Jagdhane
maintainer:          shubhamjagdhane1010@gmail.com
copyright:           Shubham Jagdhane
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Haskell-JSON
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
